--- a/www-default/index.html
+++ b/www-default/index.html
@@ -1,7 +1,7 @@
 <html>
     <head> </head>
     <body>
-        <h1>Welcome to the Default Page</h1>
-        <p>This is the default index page of the website.</p>
+        <h1>Welcome to the Default Page for Grux webserver</h1>
+        <p>This is the default index page of the Grux webserver.</p>
     </body>
 </html>
