--- a/www-default/index.html
+++ b/www-default/index.html
@@ -4,7 +4,7 @@
         <h1>Welcome to the default page for Grux webserver</h1>
         <p>Dive further into the documentation to explore all features.</p>
         <script language="JavaScript">
-            document.write('<a href="' + window.location.protocol + '//' + window.location.hostname + ':8000' + window.location.pathname + '" >Link to default admin portal location</a> ');
+            document.write('<a href="https://' + window.location.hostname + ':8000' + window.location.pathname + '" >Link to default admin portal location</a> ');
         </script>
     </body>
 </html>
