Change name from Grux to Gruxi

--- a/www-default/index.html
+++ b/www-default/index.html
@@ -2,9 +2,9 @@
 <html>
     <head> </head>
     <body>
-        <h1>Welcome to the default page for Grux webserver</h1>
+        <h1>Welcome to the default page for Gruxi webserver</h1>
         <p>Dive further into the documentation to explore all features.</p>
-        <p><a href="https://github.com/DaevTech/Grux">Link to Grux github</a></p>
-        <p><a href="https://grux.eu">Link to Grux documentation</a></p>
+        <p><a href="https://github.com/DaevTech/Gruxi">Link to Gruxi github</a></p>
+        <p><a href="https://gruxi.eu">Link to Gruxi documentation</a></p>
     </body>
 </html>
