--- a/www-admin-src/index.html
+++ b/www-admin-src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grux Administration</title>
+    <title>Gruxi Administration</title>
   </head>
   <body>
     <div id="app"></div>
